# rustdesk

./: README.md  server
agent_src/: Cargo.toml  build.rs
agent_src/libs/enigo/src/macos/: macos_impl.rs
agent_src/libs/hbb_common/: Cargo.toml
agent_src/libs/hbb_common/protos/: message.proto  rendezvous.proto
agent_src/libs/hbb_common/src/: compress.rs  config.rs  lib.rs  quic.rs
agent_src/libs/hbb_common/src/protos/: message.rs  rendezvous.rs
agent_src/libs/parity-tokio-ipc/: Cargo.toml
agent_src/src/: cm.rs  common.rs  ipc.rs  main.rs  rendezvous.rs  server.rs  windows.cc
agent_src/src/platform/: mod.rs  windows.rs
agent_src/src/server/: audio_service.rs  clipboard_service.rs  connection.rs  input_service.rs  service.rs  video_service.rs
server_src/: Cargo.toml
server_src/libs/hbb_common/: Cargo.toml
server_src/libs/hbb_common/protos/: rendezvous.proto
server_src/libs/hbb_common/src/: config.rs  lib.rs
